--- a/www/test1.html
+++ b/www/test1.html
@@ -14,7 +14,8 @@
 		</div>
 		<div id="center">
 			<h2 id="result"></h2>
-			<button id="btn" onclick="changecolor();">Ready</button>
+			<button id="btn" class="btn" onclick="changecolor();">Go !</button>
+			<button id="btn2" class="btn" onclick="back();">Menu</button>
 		</div>
     </body>
 </html>
