--- a/www/test3.html
+++ b/www/test3.html
@@ -2,19 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="css/test2.css">
+		<link rel="stylesheet" type="text/css" href="css/test3.css">
 		<script type="text/javascript" src="js/jquery.js"></script>
-		<script type="text/javascript" src="js/test2.js"></script>
-        <title>Speed Test</title>
+		<script type="text/javascript" src="js/test3.js"></script>
+        <title>Accuracy Test</title>
     </head>
     <body>
 		<div id="intro">
-			<h1>Speed Test:</h1>
-			<h2>Click as many times as you can during 10 seconds.</h2>
+			<h1>Accuracy Test:</h1>
+			<h2>Click the target when it appears.</h2>
 		</div>
-		<img id="timer" src="timer.gif">
+		<div id="target"></div>
 		<div id="center">
-			<h2 id="result"></h2>
+			<h2 id="result" class="blink">Targets hit: 0</h2>
 			<button id="btn" class="btn" onclick="start();">Go !</button>
 			<button id="btn2" class="btn" onclick="back();">Menu</button>
 		</div>
