add share button

--- a/www/test3.html
+++ b/www/test3.html
@@ -10,9 +10,10 @@
     <body>
 		<div id="intro">
 			<h1>Accuracy Test:</h1>
-			<h2>Click the target when it appears.</h2>
+			<h2>Click the red targets as fast as you can.</h2>
 		</div>
 		<div id="target"></div>
+		<img id="timer" src="timer2.gif">
 		<div id="center">
 			<h2 id="result" class="blink">Targets hit: 0</h2>
 			<button id="btn" class="btn" onclick="start();">Go !</button>
