--- a/www/index.html
+++ b/www/index.html
@@ -2,26 +2,44 @@
 <html>
     <head>
         <meta charset="utf-8" />
+		<meta property="og:url"           content="http://dadri2.olympe.in/index.html" />
+		<meta property="og:type"          content="website" />
+		<meta property="og:title"         content="Test Your Skill" />
+		<meta property="og:description"   content="Test your skills with minigames!" />
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<script type="text/javascript" src="js/index.js"></script>
         <title>Test Room</title>
     </head>
-    <body >
+    <body>
+		<div id="fb-root"></div>
+		<script>
+			(function(d, s, id) {
+				var js, fjs = d.getElementsByTagName(s)[0];
+				if (d.getElementById(id)) return;
+				js = d.createElement(s); js.id = id;
+				js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.5";
+				fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));
+		</script>
 		<h1>Welcome to your test room</br>Click on a test to start</h1>
 		<table class="intro">
 			<tr onclick="redirect_test1();">
-				<td>Reaction Time:</td>
+				<td>1. Reaction Time:</td>
 				<td id="result1" class="right">no result yet</td>
 			</tr>
 			<tr onclick="redirect_test2();">
-				<td>Click per minute:</td>
+				<td>2. Clicks per minute:</td>
 				<td id="result2" class="right">no result yet</td>
 			</tr>
 			<tr onclick="redirect_test3();">
-				<td>Accuracy:</td>
+				<td>3. Accuracy:</td>
 				<td id="result3" class="right">no result yet</td>
 			</tr>
+			<tr onclick="redirect_test3();">
+				<td></td>
+				<td style="padding-top: 10px; text-align:right"><div class="fb-share-button" data-href="http://dadri2.olympe.in/index.html" data-layout="button"></div></td>
+			</tr>
 		</table>
-		<!--<img class="counter" src="http://counter7.fcs.ovh/private/freecounterstat.php?c=354351e19d3e5907b7051019c8cbed28">-->
+		<img class="counter" src="http://counter7.fcs.ovh/private/freecounterstat.php?c=354351e19d3e5907b7051019c8cbed28">
     </body>
 </html>
