Correct text mistakes

--- a/www/test1.html
+++ b/www/test1.html
@@ -10,7 +10,7 @@
     <body>
 		<div id="intro">
 			<h1>Reaction Test:</h1>
-			<h2>Click as soon as the screen turn red.</h2>
+			<h2>Click as soon as the screen turns red.</h2>
 		</div>
 		<div id="center">
 			<h2 id="result"></h2>
