--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,14 @@
 				js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.5";
 				fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));
+
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-69995046-1', 'auto');
+			ga('send', 'pageview');
 		</script>
 		<h1>Welcome to your test room</br>Click on a test to start</h1>
 		<table class="intro">
